# LearnClaudeCode

./: # Create or edit the config file  # Create or edit the config file.pub  .env.example  .gitignore  CHAT_FEATURE.md  CLAUDE.md  README.md  backend_tutorial.md  main.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  sub-CLUDE.MD
.claude/: settings.local.json
.claude/commands/: review.md  ship.md
app/: main.py
app/core/: config.py  database.py
app/models/: cart.py  chat.py  product.py  user.py
app/routers/: cart.py  chat.py  products.py  users.py
app/services/: ai.py
docs/: setup.md
docs/superpowers/plans/: 2026-04-14-file-upload.md
e2e/: 01-auth.spec.ts  02-products.spec.ts  03-llm-chat.spec.ts  04-api-health.spec.ts
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
llm-chatbot-backend/: .env.example  .gitignore  Dockerfile  README.md  azure.yaml  docker-compose.yml  mysetup.md  requirements.txt
llm-chatbot-backend/app/: config.py  main.py  models.py
llm-chatbot-backend/docs/: llm-start.md  mysetup.md  upload.md
llm-chatbot-backend/infra/: container-app.bicep  main.bicep
llm-chatbot-backend/tests/: conftest.py  test_chat_api.py  test_config.py  test_graph_nodes.py  test_rag_retriever.py  test_upload_router.py  test_vector_store.py
test-results/01-auth-Authentication-log-b8f2a-h-email-and-password-fields-chromium/: error-context.md
test-results/02-products-Products-Page--30a75-oads-and-shows-product-grid-chromium/: error-context.md
tests/: test_cart.py  test_main.py
(+56 files in other folders)
