[project]
name = "learnclaudecode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.0",
    "httpx==0.28.1",
    "openai>=1.30.0",
    "pydantic[email]>=2.0.0",
    "pytest==9.0.2",
    "python-dotenv>=1.0.0",
    "uvicorn==0.30.0",
]
